--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <div class="col-lg-7 col-md-10 col-sm-10 center-col text-center">
                                 <span class="after-before-separator text-extra-small alt-font text-white letter-spacing-3 xs-letter-spacing-0 text-uppercase margin-20px-bottom xs-margin-5px-bottom display-inline-block">Krama Intelligent Protocol</span>
                                 <h2 class="font-weight-600 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">World’s first business-ready cognitive blockchain</h2>
-                                <a href="whitepaper.html">Whitepaper</a>
+                                <a href="whitepaper.html" class="btn btn-transparent-white btn-rounded btn-medium text-link-white">Whitepaper</a>
                                 <a href="technicalprimer.html" class="btn btn-transparent-white btn-rounded btn-medium text-link-white">Technical Primer</a>
                             </div>
                         </div> 
