-added banner and kip definition

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <div class="container nav-header-container">
                     <div class="row">
                         <div class="center-logo">
-                            <a href="index.html" title="KIP Logo" class="logo"><img src="images/png/kip_logo2.png" data-at2x="images/png/kip_logo2.png" class="logo-dark" alt="KIP Logo"><img src="images/png/kip_logo2.png" data-at2x="images/png/kip_logo2.png" alt="KIP Logo" class="logo-light default"></a>
+                            <a href="index.html" title="KIP Logo" class="logo"><img src="images/png/kip_logo2.png" data-at2x="images/png/kip_logo2.png" class="logo-dark" alt="KIP Logo">
+                                <img src="images/png/kip_logo2.png" data-at2x="images/png/kip_logo2.png" alt="KIP Logo" class="logo-light default"></a>
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 accordion-menu">
                             <button type="button" class="navbar-toggle collapsed pull-right" data-toggle="collapse" data-target="#navbar-collapse-toggle-1">
@@ -101,16 +102,23 @@
         </header>
         <!-- end header -->
         <!-- start hero section -->
-        <section class="wow fadeIn no-padding cover-background color-code" data-color="6"  style="background-image: url('images/jpg/landing.jpg');">
+        <section class="wow fadeIn no-padding cover-background color-code" data-color="6"  style="background-image: url('images/banner.jpg');">
             <div class="container full-screen position-relative">
                 <div class="slider-typography text-left">
                     <div class="slider-text-middle-main">
                         <div class="slider-text-middle">
                             <div class="col-lg-7 col-md-10 col-sm-10 center-col text-center">
-                                <span class="after-before-separator text-extra-small alt-font text-white letter-spacing-3 xs-letter-spacing-0 text-uppercase margin-20px-bottom xs-margin-5px-bottom display-inline-block">Krama Intelligent Protocol</span>
-                                <h2 class="font-weight-600 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">World’s first business-ready cognitive blockchain</h2>
-                                <a href="whitepaper.html" class="btn btn-transparent-white btn-rounded btn-medium text-link-white">Whitepaper</a>
-                                <a href="technicalprimer.html" class="btn btn-transparent-white btn-rounded btn-medium text-link-white">Technical Primer</a>
+                                <span style="color:#fbfbfb;font-weight:800;font-size:14px;" class="after-before-separator text-extra-small alt-font text-white letter-spacing-3 xs-letter-spacing-0 text-uppercase margin-20px-bottom xs-margin-5px-bottom display-inline-block">
+                                    Krama Intelligent Protocol
+                                </span>
+                                
+                                    <p style="font-size:29px;font-weight:800;color:#fbfbfb;margin-bottom:18vh;letter-spacing:1px;">Network Humanized. Blockchain transformed.</p>
+                                    <h2 style="font-size:21px;width:430px;margin-left:6vw;line-height:30px;margin-bottom:20vh;color:#fbfbfb" class="font-weight-600 text-white alt-font margin-40px-bottom xs-margin-25px-bottom">
+                                        World’s first intelligent context aware peer to peer network enabling human like Digital interactions
+                                    </h2>
+                                <a style="background-color:#fbfbfb;color:#222222;box-shadow:none;" href="whitepaper.html" class="btn btn-transparent-white btn-rounded btn-medium text-link-white">Whitepaper</a>
+                                <a style="margin-left:10px;background-color:#fbfbfb;color:#222222;box-shadow:none;" href="technicalprimer.html" class="btn btn-transparent-white btn-rounded btn-medium text-link-white">Technical Primer</a>
+                                <!-- <h4 style="margin-top:10vh;font-size:32px;letter-spacing: 2px;color:#fbfbfb;">Blockchain transformed</h4> -->
                             </div>
                         </div> 
                     </div>
@@ -625,7 +633,6 @@
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
-
           gtag('config', 'UA-117592884-1');
         </script>
 
