-changed kip description and added tesseract

--- a/index.html
+++ b/index.html
@@ -59,10 +59,12 @@
             <div class="container nav-header-container">
                 <div class="row">
                     <div class="center-logo">
-                        <a href="index.html" title="KIP Logo" class="logo"><img src="images/png/kip_logo2.png"
-                                data-at2x="images/png/kip_logo2.png" class="logo-dark" alt="KIP Logo">
-                            <img src="images/png/kip_logo2.png" data-at2x="images/png/kip_logo2.png" alt="KIP Logo"
-                                class="logo-light default"></a>
+                        <span class="title_overlay">KIP</span>
+                        <a href="index.html" title="KIP Logo" class="logo">
+                            <img src="images/tesseract.gif" data-at2x="images/png/kip_logo2.png" class="logo-dark" alt="KIP Logo" />
+                            <img src="images/tesseract.gif" data-at2x="images/png/kip_logo2.png" alt="KIP Logo"
+                                class="logo-light default" />
+                        </a>
                     </div>
                     <div class="col-md-12 col-sm-12 col-xs-12 accordion-menu">
                         <button type="button" class="navbar-toggle collapsed pull-right" data-toggle="collapse"
@@ -141,7 +143,7 @@
                             <p class="network">
 
                                 Network Humanized. Blockchain transformed.</p>
-                            <p class="kipdesc">
+                            <p class="kipdesc" style="width:32vw;margin-left:6.5vw;">
                                 World’s first intelligent context aware peer to peer network enabling human like Digital
                                 interactions
                             </p>
@@ -185,10 +187,11 @@
                     <div
                         class="text-extra-small letter-spacing-3 alt-font text-white text-uppercase margin-70px-bottom sm-margin-50px-bottom xs-margin-30px-bottom display-inline-block">
                         What is KIP?</div>
-                    <h5 class="text-white alt-font width-95 sm-width-100 margin-70px-bottom sm-no-margin-bottom">KIP
-                        stands for Krama Intelligence Protocol. <br>KIP is a distributed intelligence protocol that
-                        creates hybrid cooperative digital mesh by integrating a new business-ready Gen3 blockchain
-                        technology, heterogeneous distributed data, trustable cognition and connected devices.</h5>
+                    <h5 class="text-white alt-font width-95 sm-width-100 margin-70px-bottom sm-no-margin-bottom">KIP stands for Krama Intelligent protocol.
+                    </h5>
+                    <h6>KIP is an intelligent context-aware peer to peer value network enabling human-like digital interactions through a Tesseract grid (T-grid). 
+                        Each and every user interaction is persisted as a locus on the T-grid by simultaneously optimising decentralised 
+                        compute, distributed storage, modulated trust and multi-dimensional value.</h6>
                 </div>
             </div>
         </div>
